--- a/src/styles/elements.css
+++ b/src/styles/elements.css
@@ -5,12 +5,13 @@
 }
 
 html {
+  accent-color: var(--surface-brand);
   background-color: var(--surface-1);
   background-image: url("../assets/noise.svg");
   color: var(--text-1);
   font-family: var(--font-sans);
   line-height: var(--ratio);
-  accent-color: var(--surface-brand);
+  position: relative;
 }
 
 @media screen and (prefers-reduced-motion: no-preference) {
